--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.99.9 RC2:
+*) Minor changes to ART/GADGET input routines to support loading particles from a pipe instead of a file.
+*) Fixed crashing issues in BGC2/STRICT_SO_MASSES code (thanks to Matt Becker for finding!).
+
 v0.99.9 RC1 (3/13/2013):
 *) Fixed Rs_Klypin to use bound mass instead of unbound mass for halos when BOUND_PROPS = 1.  (Thanks to Yao-Yuan Mao for finding!).
 *) More efficient memory allocation in tree construction.
