--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,28 @@
-v0.99.9 RC2:
+v0.99.9-RC3:
+*) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
+*) Major fix to shape calculations within R_500c: previous versions were effectively not iterating the shape calculation.
+*) Fix to calculation of T/|U|.  Previous versions incorrectly reported 0.5T/|U|.  The Peebles spin calculation is also affected by this error (in calculating |U|).  To correct for this in previous versions, multiply the previous Peebles spin parameter by sqrt(1-T/|U|)/sqrt(2-T/|U|), where T/|U| is the correct value of T/|U| (i.e., twice the value in the T/|U| column).  Thanks to Max Gronke for finding this error.
+*) Additional experimental pseudo-evolution mass calculations.
+*) Improved simulation data load distribution to reduce network transmissions.
+*) Added EXACT_LL_CALC option for more deterministic (but slower) halo property calculation.  Set to 1 to enable.
+*) Added HDF5 support for GADGET and AREPO (use FILE_FORMAT=AREPO for both), thanks to Dylan Nelson.
+*) Make finish_bgc2 auto-load the box size from BGC2 files (thanks to Manodeep Sinha for catching).
+*) Additional field in binary output header to indicate non-compatible binary versions.
+*) Experimental binary catalog format for use with future versions of Consistent Trees.
+
+v0.99.9-RC2 (9/27/13):
+*) Major fix to shape calculations: previous versions had biased iterative calculations of the shape major axis.  (Thanks to Doug Hellinger for finding!).  Shape calculations are now weighted according to the Allgood et al. approach (1/r^2).
+*) Shape calculations are done at two radii (Rvir and R500c by default).  This has resulted in some changes to the output column order.
+*) Applied patch from Matt Turk to let YT calculate arbitrary halo properties.
 *) Minor changes to ART/GADGET input routines to support loading particles from a pipe instead of a file.
+*) Added a STRICT_SO_MASSES mode for calculating SO masses without gravitational unbinding or limits due to the use of FOF for initial group finding.
 *) Fixed crashing issues in BGC2/STRICT_SO_MASSES code (thanks to Matt Becker for finding!).
+*) Fixed a rare issue wherein BGC/SO masses would be set to the mass of a single particle.
+*) Updates to ART code to support new Bolshoi-Planck format.
+*) Speed improvements, especially for halos under 10,000 particles.
+*) Dark energy equation of state now allowed to be changed (code and testing thanks to Matt Becker).  Change W0 and WA in the config file to use.
+*) New script mkpipes.pl to help with making named pipes for use with alternative input formats.
+*) README is now a proper manual generated with LaTeX.
 
 v0.99.9 RC1 (3/13/2013):
 *) Fixed Rs_Klypin to use bound mass instead of unbound mass for halos when BOUND_PROPS = 1.  (Thanks to Yao-Yuan Mao for finding!).
@@ -13,7 +35,7 @@ v0.99.8: (Not publicly released)
 *) Added FORCE_RES_PHYS_MAX configuration parameter to set the maximum physical force resolution---mainly useful for analyzing simulations at a>>1.
 
 v0.99.7: (Not publicly released)
-*) Static code analysis now regular part of release cycle.  (Thanks to both Coverity and to the Clang project).  Two memory leaks (in the TIPSY and BGC2 IO) are now fixed. 
+*) Static code analysis now regular part of release cycle.  (Thanks to both Coverity and to the Clang project).  Two memory leaks (in the TIPSY and BGC2 IO) are now fixed.
 *) Fixed crash due to floating-point roundoff errors in building FOF groups across periodic boundaries.
 *) Added network profiling.  This will help improve processor utilization in future versions.
 
